// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's group destination action: all fields 1`] = `
Object {
  "anonymousId": "DY&TUQqmpg2I",
  "groupId": "DY&TUQqmpg2I",
  "messageId": Any<String>,
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "DY&TUQqmpg2I",
  },
  "userId": "DY&TUQqmpg2I",
}
`;

exports[`Testing snapshot for Ripe's group destination action: required fields 1`] = `
Object {
  "anonymousId": "anonId1234",
  "groupId": "DY&TUQqmpg2I",
  "messageId": Any<String>,
  "timestamp": Any<String>,
  "traits": Object {},
  "userId": "user1234",
}
`;
